unpackaged/main/default/objects/GraphicsPackImages__mdt/GraphicsPackImages__mdt.object-meta.xml
<CustomObject>
    <label>Graphics Pack Image</label>
    <pluralLabel>Graphics Pack Images</pluralLabel>
</CustomObject>