unpackaged/main/default/objects/GraphicsPackImages__mdt/fields/Graphic_Setting_ID__c.field-meta.xml
<CustomField>
    <fullName>Graphic_Setting_ID__c</fullName>
    <label>Graphic Setting ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>