unpackaged/main/default/objects/GraphicsPackImages__mdt/fields/Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_URL__c</fullName>
    <label>Image URL</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>