unpackaged/main/default/objects/GraphicsPackImages__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flags</fullName>
                <default>true</default>
                <label>Flags</label>
            </value>
            <value>
                <fullName>Silk</fullName>
            </value>
            <value>
                <fullName>Theme</fullName>
            </value>
            <value>
                <fullName>Animals</fullName>
            </value>
            <value>
                <fullName>Halloween</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Robots</fullName>
            </value>
            <value>
                <fullName>FarmFresh</fullName>
            </value>
            <value>
                <fullName>Monsters</fullName>
            </value>
            <value>
                <fullName>Vacation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>